# git2megaignore

./: .gitignore  .megaignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md
example/: .gitignore  .megaignore
src/: main.rs
