[package]
name = "git2megaignore"
description = "Convert a .gitignore file to a .megaignore file"
keywords = ["gitignore", "git", "mega", "file", "pattern"]
categories = ["command-line-utilities"]
repository = "https://github.com/Farfi55/git2megaignore.git"
authors = ["Alessio Farfaglia"]
license = "MIT"
version = "0.3.1"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
env_logger = "0.11.6"
log = "0.4.22"
